app/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    job: node-api
    app: app-svc
  name: app-svc
  namespace: default
spec:
  ports:
  - name: app-svc-port
    port: 80
    protocol: TCP
    targetPort: 3000
  selector:
    app: app-deploy
  type: ClusterIP
